[package]
name = "glacier"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
bytes = "1.10.0"
dashmap = "6.1.0"
futures = "0.3.31"
glacier_macro = { path = "glacier_macro" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_qs = "0.13.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

tokio-rustls = { version = "0.26.2" }
rustls = { version = "0.23.23" }
rustls-pemfile = { version = "2.2.0" }
h2 = "0.4.8"
http = "1.2.0"
