[package]
name = "glacier"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
pin-project-lite = "0.2.16"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
