[package]
name = "glacier"
version = "0.1.0"
edition = "2024"

[dependencies]
pin-project-lite = "0.2.16"
tracing = { version = "0.1.41", default-features = false }

serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.14.0"
http-body-util = "0.1.3"

hyper = { version = "1.6.0", default-features = false, features = [
    "http1",
    "server",
] }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
] }
